# P12_SPICE_Simulator

./: .gitignore  CMakeLists.txt  README.md  csim.py  netlist.txt  text.tex
.cache/clangd/index/: main.c.52D0EC0245392905.idx
src/: #main.c#  .#main.c  main.c
